--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
    		<groupId>javax.xml.bind</groupId>
@@ -47,9 +54,9 @@
       <version>1.2.16</version>
 	</dependency>
 	<dependency>
-		<groupId>GUIUtils</groupId>
+		<groupId>com.github.Kneuman0</groupId>
 		<artifactId>GUIUtils</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>-SNAPSHOT</version>
 	</dependency>
   </dependencies>
    <build>
